# mandel

./: CMakeLists.txt  README.md  main.cpp  shader.frag  shader.vert
